--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react": "^16.5.0",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-scripts": "^1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
